(fix) O3-2752: encounter view RTL alignment fix

--- a/packages/esm-patient-chart-app/src/visit/visits-widget/past-visits-components/visits-table/visits-table.scss
+++ b/packages/esm-patient-chart-app/src/visit/visits-widget/past-visits-components/visits-table/visits-table.scss
@@ -6,6 +6,10 @@
 .tableContainer {
   padding: 0;
 
+  :global(.cds--data-table) td {
+    text-align: start;
+  }
+
   :global(.cds--data-table-header) {
     padding: 0;
   }
@@ -18,6 +22,10 @@
 
   &:global(.cds--data-table-container) {
     background: none !important;
+  }
+
+  :global(.cds--table-header-label) {
+    text-align: start;
   }
 }
 
@@ -40,7 +48,7 @@
 }
 
 .expandedRow {
-  padding-left: 3.5rem;
+  padding-inline-start: 3.5rem;
 
   > td {
     padding: inherit !important;
